--- a/html/package.json
+++ b/html/package.json
@@ -19,6 +19,7 @@
     "qs": "^6.8.0",
     "ts-loader": "^6.0.4",
     "vue": "^2.5.2",
+    "vue-bus": "^1.2.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
   },
