--- a/html/package.json
+++ b/html/package.json
@@ -18,6 +18,7 @@
     "element-ui": "^2.11.1",
     "file-saver": "^2.0.2",
     "filesaver": "0.0.13",
+    "jquery": "^3.4.1",
     "pdf": "^0.1.0",
     "qs": "^6.8.0",
     "ts-loader": "^6.0.4",
